Add support for spark unit testing with just one context, configure the production context to use every core, and ask the second question in the exercise